--- a/day2/index.html
+++ b/day2/index.html
@@ -18,7 +18,7 @@
         </nav>
 
         <h1 class="title">Hi, I'm Gunjan Naraniya</h1>
-        <p>Welcome to my styled profile page!</p>
+        <p class="title">Welcome to my styled profile page!</p>
     </header>
 
     <div class="container">
